Cleaned draft and minor improvements.

--- a/Security.tex
+++ b/Security.tex
@@ -20,7 +20,7 @@ The user must be able to tell the system which resources should be accessible by
 Users must communicate with the trusted shell over a secure path.
 \subsection{CapSecAP: Capability-based Security Application Protocol}
 \subsubsection{Tokens are resource descriptors}
-Due to the everything-is-a-file policy of POSIX, it is possible to achieve capability-based security on POSIX (and compatible) systems through file descriptor passing. To preserve generality, we will refer to "resource descriptors", which are more accurate compared to "file descriptors", since "files" are typically data and associated metadata kept on assumed permanent media and cached to working memory.
+Due to the everything-is-a-file policy of POSIX, it is possible to achieve capability-based security on POSIX (and compatible) systems through file descriptor passing. To preserve generality, we will refer to "resource descriptors" instead of "file descriptors"\footnote{For example, sockets cf. the definition of a file in the Oxford and Merriam-Webster dictionaries; therefore the term "resource" was chosen in this document as a more appropriate term. See also "Everything is an URL" in Redox.}.
 \subsubsection{High level overview}
 To not burden higher levels in the software stack or even the user with opening resource descriptors for each file touched by the software in question, access control policy must allow access to caches, common configuration files, etc., which fall under the scope of the software anyway.\\
 Resource descriptors are passed by the trusted shell. In many instances, the resources that the program should open are already known by the shell (program arguments for command-line shells, selected resources for interactive shells). In the other case, the software must actively request access to a resource from the trusted shell. This must be done by either calling an executable that is not restricted by the access control mechanism (a concept similar to setuid), or by requesting the resource through the session bus.
