--- a/Serialization.tex
+++ b/Serialization.tex
@@ -80,4 +80,4 @@ It is up to the serialization implementation to ensure the correctness of type t
 TODO: Suggest solutions to these issues
 \paragraph{Extensions}
 All compliant implementations of this serialization format that support extensions to this format must provide a mechanism of warning when extensions are emitted or read from a serialized document.\\
-Null terminated strings were intentionally not included in the format, which is designed to not have in-band signaling. It is expected that some implementations may choose to allow such strings by extending the serialization format. Beyond the required warning, such implementations that support in-band signaled types must fail-fast on encountering such input when running in compliance mode. This is to mean that if this serialization format is used as an industrial standard, then the use of in-band signaled types, such as null terminated strings, is incompatible with said the resulting standard. Components that interface with legacy infrastructure are exempted from the previous statement if appropriately labeled as such.
+Null terminated strings were intentionally not included in the format, which is designed to not have in-band signaling. It is expected that some implementations may choose to allow such strings by extending the serialization format. Beyond the required warning, such implementations that support in-band signaled types must fail-fast on encountering such input when running in compliance mode. This is to mean that if this serialization format is adopted as an industrial standard, then the use of in-band signaled types, such as null terminated strings, must be incompatible with the resulting standard. Components that interface with legacy infrastructure are exempted from the previous statement if appropriately labeled as such.
